--- a/public/style.css
+++ b/public/style.css
@@ -18,13 +18,62 @@ header{
 }
 
 
+
 h1 {
     font-family: 'Texturina', serif;
     font-size: 30px;
     letter-spacing: 3px;
     text-align: center;
 }
-
+#eraser{
+    font-size: 40px;
+    padding: 2px;
+}
+#eraser:hover{
+    color: rgb(236, 183, 183)
+}
+#pencil{
+    font-size: 40px;
+    padding: 2px;
+}
+#pencil:hover{
+    color: rgb(236, 183, 183)
+}
+#fa{
+    font-size: 40px;
+    padding: 2px;
+}
+#fa:hover{
+    color: rgb(236, 183, 183)
+}
+#clearBtn{
+    font-size: 40px;
+    padding: 2px;
+}
+#clearBtn:hover{
+    color: rgb(236, 183, 183)
+}
+#prostokat{
+    font-size: 40px;
+    padding: 2px;
+}
+#prostokat:hover{
+    color: rgb(236, 183, 183)
+}
+#download{
+    font-size: 40px;
+    padding: 2px;
+}
+#download:hover{
+    color: rgb(236, 183, 183)
+}
+#alert{
+    font-size: 40px;
+    padding: 2px;
+}
+#alert:hover{
+    color: rgb(236, 183, 183)
+}
 #wrapper {
     display: flex;
     width: 100%;
@@ -51,9 +100,12 @@ h1 {
     margin-left: auto !important;
     margin-right: auto !important;
     background-color: #ff3800;
-    border-radius: 20%;
     width: 700px;
-    padding: 20px;
+    padding:0px 10px 0px 10px;
+    position: relative;
+    top: 0;
+    z-index: 100;
+    overflow: hidden;
 }
 
 #widthControl {
@@ -111,6 +163,7 @@ h1 {
     margin-right: auto;
     display: flex;
     flex-wrap: row-reverse;
+    overflow: hidden;
 
 }
 
@@ -130,13 +183,14 @@ h1 {
 
 #counterDiv {
     font-size: 14px;
-    text-align: center;
+    text-align: left;
+    top: 0;
+    left: 0;
+    background-color: #fff;
     position: fixed;
-    bottom: 5px;
     color: #000;
-    border: 3px solid #000;
-    padding: 10px;
-    border-radius: 20px;
+    padding: 5px 0px 0px 10px;
+    overflow: hidden;
 }
 .sticky
 {
@@ -146,9 +200,7 @@ h1 {
     margin-left: auto !important;
     margin-right: auto !important;
     background-color: #ff3800;
-    border-radius: 20%;
-    padding: 20px;
-    border: 4px inset #000;
+    padding: 0px 10px 0px 10px;
 }
 
 .content{
@@ -157,4 +209,6 @@ h1 {
     margin-left: auto ;
     margin-right: auto;
     text-align: center;
+    z-index: 100;
+    top: 0;
 }
