--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap");
 *{
-    cursor: url("./nowy.png"), auto;
+    cursor: url("./cursor-line.png"), auto;
 }
 body {
     margin: 0;
@@ -49,6 +49,7 @@ h1 {
 #clearBtn{
     font-size: 40px;
     padding: 2px;
+    
 }
 #clearBtn:hover{
     color: rgb(236, 183, 183)
@@ -82,7 +83,7 @@ h1 {
 
 #canvas {
     background-color: rgb(255, 255, 255);
-    cursor: url("./nowy.png");
+    cursor: url("./jakiss.png"), auto;
 }
 
 #download
